[package]
name = "pagi-external-api-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "pagi_external_api_lib"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15"
async-trait = "0.1"

